horizontal scroll fix

--- a/HW#9/css/style.css
+++ b/HW#9/css/style.css
@@ -615,6 +615,7 @@ body {
   /* width: 376px; */
   gap: 8%;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .link-footer {
@@ -999,17 +1000,19 @@ body {
   .content-block-oursay {
     margin: 0 auto;
     width: 360px;
+    max-width: 100%;
     /* padding-left: 4vw; */
   }
 
   .oursay .sub-headers-desc {
     width: 323px;
+    max-width: 100%;
   }
 
   .slider-oursay {
     margin-top: 41px;
-    margin-left: 7px;
     width: 323px;
+    max-width: 100%;
   }
 
   .item-cards-slider,
@@ -1027,6 +1030,7 @@ body {
 
   .item-pagination {
     width: 334px;
+    max-width: 100%;
     margin-top: 25px;
   }
 
@@ -1079,7 +1083,7 @@ body {
 
   .getupclose .app-link {
     margin-top: 37px;
-    margin-left: -3px;
+    margin-left: -10%;
   }
 
   .footer {
@@ -1093,7 +1097,7 @@ body {
 
   .footer-links {
     order: 3;
-    gap: %;
+    gap: 5%;
     justify-content: flex-start;
   }
 
